feat: Implement OAuth2 security configuration and update application properties